--- a/UNO/UNO/UNO/Base.lproj/LaunchScreen.storyboard
+++ b/UNO/UNO/UNO/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16G1314" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="17E202" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,14 +14,37 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unoloadingscreen" id="jRJ-VW-Nci">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BJc-if-PSL"/>
+                        <viewControllerLayoutGuide type="bottom" id="WJH-JA-D0V"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="M4h-xh-uI6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="unoloadingscreen" translatesAutoresizingMaskIntoConstraints="NO" id="HNM-7u-gIV">
+                                <rect key="frame" x="62" y="143" width="251" height="381"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="redraw" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="oXT-1l-Y6b">
+                                <rect key="frame" x="177" y="437" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HNM-7u-gIV" firstAttribute="leading" secondItem="M4h-xh-uI6" secondAttribute="leadingMargin" constant="46" id="1al-rM-vsn"/>
+                            <constraint firstItem="HNM-7u-gIV" firstAttribute="top" secondItem="BJc-if-PSL" secondAttribute="bottom" constant="123" id="26s-1t-dxz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oXT-1l-Y6b" secondAttribute="trailing" constant="162" id="4A8-yE-wLE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HNM-7u-gIV" secondAttribute="trailing" constant="46" id="9FI-Kg-bMl"/>
+                            <constraint firstItem="WJH-JA-D0V" firstAttribute="top" secondItem="HNM-7u-gIV" secondAttribute="bottom" constant="143" id="DxA-LV-BPQ"/>
+                            <constraint firstItem="oXT-1l-Y6b" firstAttribute="top" secondItem="BJc-if-PSL" secondAttribute="bottom" constant="417" id="Lj1-3o-MRz"/>
+                            <constraint firstItem="oXT-1l-Y6b" firstAttribute="leading" secondItem="M4h-xh-uI6" secondAttribute="leadingMargin" constant="161" id="OVP-Sd-urC"/>
+                            <constraint firstItem="WJH-JA-D0V" firstAttribute="top" secondItem="oXT-1l-Y6b" secondAttribute="bottom" constant="210" id="jIz-5A-w3P"/>
+                        </constraints>
+                    </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="7.2000000000000002" y="368.36581709145429"/>
         </scene>
     </scenes>
     <resources>
